
syntax= "proto3";

package exercise;

option go_package = "github.com/flavioesteves/wizer-app/broker/proto/exercise";

import "google/protobuf/empty.proto";
import "model.proto";


message CreateExerciseRequest {
  model.Exercise exercise = 1;
}

message GetExerciseRequest {
  string id = 1;
}

message UpdateExerciseRequest {
  model.Exercise exercise = 1;
}

message DeleteExerciseRequest {
  string id = 1;
}

message GetAllExercisesRequest {
  // Potential parameters for filtering, pagination
}

message GetAllExercisesResponse {
  repeated model.Exercise exercises = 1;
}

message ExerciseResponse {
  model.Exercise exercise = 1;
}

message GetRoutinesByExerciseIdRequest {
  string exercise_id = 1;
}

message GetRoutinesByExerciseIdResponse {
  repeated model.Routine routines = 1;
}


service ExerciseService {
  rpc CreateExercise (CreateExerciseRequest) returns (ExerciseResponse);
  rpc GetExercise (GetExerciseRequest) returns (ExerciseResponse);
  rpc UpdateExercise (UpdateExerciseRequest) returns (ExerciseResponse);
  rpc DeleteExercise (DeleteExerciseRequest) returns (google.protobuf.Empty);
  rpc GetAllExercises (GetAllExercisesRequest) returns (GetAllExercisesResponse);

 // Relationship many to many Exercise <-> Routine
  rpc GetRoutinesByExerciseId (GetRoutinesByExerciseIdRequest) returns (GetRoutinesByExerciseIdResponse);
  }
